--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
+# Ignore node_modules directory
 node_modules
-uploads
+
+# Ignore environment variables
+.env
+
+# Ignore uploads directory
+/uploads
