--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/brianphil/jpacs#readme",
   "dependencies": {
     "axios": "^1.7.7",
+    "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
