--- a/fe/package.json
+++ b/fe/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bytescale/sdk": "^3.45.0",
+    "@bytescale/upload-widget-react": "^4.19.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
